Fix the nested-td-containing-nested-table for the program cells, style them appropriately with explicit padding/border-spacing, and (in doing so) fix the issue with conditionals sometimes not being clickable and/or the clickable area for the command being in the wrong place

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body,html
   left:25vw;
   top:10vh;
   width:50vw;
-  padding:5px 5px 5px 5px; /* give some space inside the popup */
+  padding:5px 10px 5px 10px; /* give some space inside the popup */
   box-shadow:10px 10px 5px #505050;
 }
 
@@ -79,11 +79,8 @@ body,html
 body
 {
 font-family:"Tahoma","Geneva","sans-serif";
-margin-top: 0px;
-margin-left: 0px;
-margin-right: 0px;
-margin-bottom: 0px;
-padding: 0px;
+margin:0px;
+padding:0px;
 }
 
 .c_claw_shut
@@ -208,11 +205,7 @@ padding: 0px;
 
 p
 {
-margin: 0;
-margin-top: 0;
-margin-bottom: 0;
-margin-left: 0;
-margin-right: 0;
+margin:0px;
 }
 
 .prog_container
@@ -250,6 +243,9 @@ margin-right: 0;
 {
   border:2px solid black;
   background-color:white;
+  padding:0px;
+  margin:0px;
+  border-spacing:2px;
 }
 .prog_cmd_slot_next
 {
@@ -266,12 +262,21 @@ margin-right: 0;
   border:2px solid blue;
   background-color:yellow;
 }
+.prog_cmd_slot_inner_table
+{
+  border-spacing:0px;
+  padding:0px;
+  margin:0px;
+  border:0px;
+  width:100%;
+}
 .prog_cmd
 {
   background-size:auto 100%;
   background-repeat:no-repeat;
   background-position: center;
   text-align:center;
+  padding:0px;
 }
 .prog_cmd_LEFT
 {
@@ -316,6 +321,8 @@ margin-right: 0;
   background-position: center;
   text-align:center;
   opacity:0.5;
+  padding:0px;
+  margin:10px 10px 10px 10px;
 }
 .prog_cond_Blue
 {
